management-cluster/fluxcd/infrastructure/harbor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: https-harbor
  hostnames:
    - harbor-mgmt.yuriy-lab.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor
          port: 80
